--- a/offtp/Makefile
+++ b/offtp/Makefile
@@ -1,2 +1,3 @@
-all: offtp.cpp
+all: offtp.cpp client.cpp
 	g++ -Wall -Wextra -Werror -std=c++11 -lutil -o offtp offtp.cpp
+	g++ -Wall -Wextra -Werror -std=c++11 -lutil -o client client.cpp
